fix: ffmpeg in docker and ui issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div id="loading-indicator" style="display:none;">
-            <p>Processando o vídeo... aguarde.</p>
+            <p>I'm working.. wait few seconds..</p>
         </div>
         <div id="player-container" style="display:none;">
             <video id="video-player" width="100%" controls></video>
