--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>CropTube</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='ico.ico') }}">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="container">
