feat: change lib to pytubefix and fix logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,8 @@
             <input type="text" id="url" name="url" placeholder="Paste YouTube link here..." class="form-control">
             <div class="settings-container" style="display:none;">
                 <select id="format" name="format" class="form-control">
-                    <option value="mp4">MP4</option>
-                    <option value="avi">AVI</option>
-                    <option value="mp3">MP3</option>
+                    <option value="video">Video</option>
+                    <option value="audio">Audio</option>
                 </select>
                 <select id="quality" name="quality" class="form-control" style="display:none;">
                     <option value="">Loading...</option>
